<resources>
    <string name="app_name">Movie Hub</string>


    <!--XML Attributes-->
    <string name="network_error">Network error. Please try again.</string>
    <string name="no_favorites_added">No favorites</string>
    <string name="add_favorites_descr">Tap the heart icon when viewing movie details to add it to your favorites</string>
    <string name="share_title">Share</string>
    <string name="share_content_start">Check out this trailer for</string>
    <string name="share_content_end">#MovieHub</string>

    <!--Image Content Descriptions-->
    <string name="thumbnail_content">Movie thumbnail</string>
    <string name="trailer_content">Trailer video</string>
    <string name="expand_arrow_content">Expand review</string>

    <!--Favorites Snackbar Labels-->
    <string name="snackbar_favorited_title">Added to favorites</string>
    <string name="snackbar_unfavorited_title">Removed from favorites</string>
    <string name="snackbar_undo_label">UNDO</string>

    <!--Activity Titles-->
    <string name="main_title_pop">Popular Movies</string>
    <string name="main_title_top">Top Rated Movies</string>
    <string name="movie_detail_title"></string>

    <!--Menu titles-->
    <string name="sortBy1">"Sort by most popular"</string>
    <string name="sortBy2">Sort by top rated</string>

    <!--Movie Detail Activity Labels-->
    <string name="trailers_header">Trailers</string>
    <string name="reviews_header">Reviews</string>


    <!--Hardcoded Movie Information for Android Studio-->
    <string name="hc_movie_title">Movie Title</string>
    <string name="hc_movie_year">2017</string>
    <string name="hc_movie_rating">7.8/10</string>
    <string name="hc_movie_descr">Movie description goes here.</string>
    <string name="hc_trailer_title">Trailer #1</string>

    <!--Empty View Labels-->
    <string name="empty_reviews">No reviews have been made</string>
    <string name="empty_trailers">No trailers are available</string>
    <string name="empty_movies">No movies are available at this time</string>

    <!--Error Toast Labels-->
    <string name="no_trailers_toast">No trailers to share</string>
    <string name="no_trailer_player_app_toast">No available app to play trailer</string>
    <string name="no_shareable_apps">No available apps to share with</string>

</resources>
