<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_layout"
    android:background="@color/colorAccentDark"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sv_detail"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/app_bar"
                android:background="@color/colorAccentDark">

                <include layout="@layout/top_movie_detail_header_section"/>



            </android.support.design.widget.AppBarLayout>


            <RelativeLayout
                android:id="@+id/rl_detail_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_detail_spacing"
                android:layout_below="@id/app_bar">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_movie_thumb"
                    android:layout_width="185dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="@dimen/activity_detail_spacing"
                    android:layout_marginLeft="@dimen/activity_detail_spacing"
                    android:layout_marginTop="@dimen/activity_detail_spacing"
                    tools:src="@drawable/error_placeholder"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/thumbnail_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_detail_spacing"
                    android:layout_marginStart="@dimen/activity_detail_spacing"
                    android:layout_marginRight="@dimen/activity_detail_spacing"
                    android:layout_marginEnd="@dimen/activity_detail_spacing"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/tv_title"
                    tools:text="@string/hc_movie_title"
                    android:textColor="#D8000000"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_toEndOf="@id/iv_movie_thumb"
                    android:layout_toRightOf="@id/iv_movie_thumb"
                    android:layout_alignTop="@id/iv_movie_thumb" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_year"
                    tools:text="@string/hc_movie_year"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="15sp"
                    android:layout_alignStart="@id/tv_title"
                    android:layout_alignLeft="@id/tv_title"
                    android:layout_below="@id/tv_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_rating"
                    tools:text="@string/hc_movie_rating"
                    android:fontFamily="sans-serif"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:layout_alignStart="@+id/tv_year"
                    android:layout_alignLeft="@id/tv_year"
                    android:layout_below="@+id/tv_year"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_star"
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/ic_grade_black_24dp"
                    android:layout_toEndOf="@id/tv_rating"
                    android:layout_toRightOf="@id/tv_rating"
                    android:layout_marginTop="3dp"
                    android:layout_below="@id/tv_year"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_overview"
                    tools:text="@string/hc_movie_descr"
                    android:layout_marginRight="@dimen/activity_detail_spacing"
                    android:layout_marginEnd="@dimen/activity_detail_spacing"
                    android:layout_marginTop="@dimen/activity_detail_spacing"
                    android:layout_marginBottom="@dimen/activity_detail_spacing"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textSize="15sp"
                    android:layout_below="@id/tv_rating"
                    android:layout_alignLeft="@id/tv_rating"
                    android:layout_alignStart="@+id/tv_rating"/>
            </RelativeLayout>

            <include layout="@layout/detail_card_section"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/cv_trailer_section"
                android:layout_below="@id/rl_detail_section"/>


            <include
                layout="@layout/detail_card_section"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/cv_review_section"
                android:layout_below="@id/cv_trailer_section"/>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_detail_spacing"
        android:clickable="true"
        android:src="@drawable/ic_action_favorite_unfilled"
        android:tint="@android:color/holo_red_light"
        android:onClick="onFavButtonClick"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
